<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="itesm.mx.expediciones_biosfera.behavior.activities.DestinationActivity">

        <ir.apend.slider.ui.Slider
            android:id="@+id/sliderImages"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="5dp"
            app:animateIndicators="true"
            app:defaultIndicators="circle"
            app:indicatorSize="8dp"
            app:intervalSecond="5"
            app:loopSlides="true" />

        <TextView
            android:id="@+id/text_map_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sliderImages"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/map_header"
            style="@style/destination_section_header"/>

        <RelativeLayout
            android:id="@+id/map_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/text_map_header">

            <fragment
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                map:uiCompass="true"
                map:uiRotateGestures="true"
                map:uiScrollGestures="true"
                map:uiTiltGestures="true"
                map:uiZoomControls="true"
                map:uiZoomGestures="true"
                tools:context=".behavior.activities.DestinationActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment" />

            <ImageView
                android:id="@+id/transparent_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/transparent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_description_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/map_layout"
            android:text="@string/description_header"
            style="@style/destination_section_header"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_description_header"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/text_duration_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/text_description"
            android:text="@string/duration_header"
            style="@style/destination_section_header"/>

        <TextView
            android:id="@+id/text_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_duration_header"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/text_price_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/text_duration"
            android:text="@string/price_header"
            style="@style/destination_section_header"/>

        <TextView
            android:id="@+id/text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_price_header"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/btn_rsvp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_price"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:text="@string/btn_reserve" />

    </RelativeLayout>
</ScrollView>