<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".behavior.activities.ReservationActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_title"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_select_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <SeekBar
            android:id="@+id/sb_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="15"
            android:progress="2"
            android:theme="@style/MyDatePickerDialogTheme" />

        <TextView
            android:id="@+id/tv_date_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reservation_date_description" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="aaa"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="showDatePickerDialog"
            android:text="@string/reservation_change_name" />

        <TextView
            android:id="@+id/tv_summary_pt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_summary_pt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_estimate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/bt_pre_reservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Solicitar disponibilidad"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>